# cqlmig

./: .gitignore  Cargo.toml  README.md
.github/: FUNDING.yml
cqlmig/: Cargo.toml
cqlmig-cdrs-tokio/: Cargo.toml
cqlmig-cdrs-tokio/src/: lib.rs
cqlmig/src/: lib.rs
cqlmig/src/migrations/: V0_0_0__Init cqlmig.cql
hooks/: pre-commit
