[package]
name = "cqlmig-cdrs-tokio"
version = "0.0.1"
edition = "2021"
description = "CDRS Tokio client implementation for cqlmig."
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cqlmig = { path = "../cqlmig" }
tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread"] }
cdrs-tokio = "7.0.3"
async-trait = "0.1.61"


[dev-dependencies]
dockertest = "0.3.1"
