[package]
name = "cqlmig-cdrs-tokio"
version = "0.0.1"
edition = "2021"
description = "CDRS Tokio client implementation of cqlmig."
license = "MIT OR Apache-2.0"
documentation = "https://github.com/rm3dom/cqlmig"
homepage = "https://github.com/rm3dom/cqlmig"
repository = "https://github.com/rm3dom/cqlmig"
readme = "../README.md"
keywords = ["cassandra", "scylladb", "migration", "cassandradb", "cql"]

[dependencies]
cqlmig = { path = "../cqlmig", version = "0.0.1" }
tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread"] }
cdrs-tokio = "7.0.3"
async-trait = "0.1.61"


[dev-dependencies]
dockertest = "0.3.1"
