[package]
name = "cqlmig"
version = "0.0.1"
edition = "2021"
description = "Base package of cqlmig."
license = "MIT OR Apache-2.0"
documentation = "https://github.com/rm3dom/cqlmig"
homepage = "https://github.com/rm3dom/cqlmig"
repository = "https://github.com/rm3dom/cqlmig"
readme = "../README.md"
keywords = ["cassandra", "scylladb", "migration", "cassandradb", "cql"]

[dependencies]
regex = "1.7.1"
async-trait = "0.1.61"
ring = "0.16.20"

[dev-dependencies]
tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread"] }
